fixed svg not showing on mobile devices (#12)

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -31,5 +31,6 @@ body {
 @media screen and(max-width: 500px) {
   .flex-div {
     flex-direction: column;
+    display: block;
   }
 }
